app/media-server/bazarr/bazarr-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
      - name: bazarr
        image: pmialon/bazarr
        imagePullPolicy: Always
        # MountVolume.SetUp failed for volume "kube-api-access ca.crt no space left
        resources:
          limits: # you restrict the maximum amount of memory available to the pods 
            memory: "1Gi"
          requests: # allow you to allocate a guaranteed minimum of computing resources for the pods r
            memory: "256Mi"
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads # The mountpoint inside the container
          name: nfs-vol
      restartPolicy: Always
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr
      - name: nfs-vol
        nfs:
          server: 192.168.0.21 # IP to our NFS server
          path: /media/ # The path to our NFS share # The exported directory
status: {}
