app/media-server/bazarr/bazarr-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 6767
  selector:
    app: qbittorrent
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
