app/media-server/bazarr/bazarr-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Media Server
    gethomepage.dev/group: Media
    gethomepage.dev/icon: bazarr.png
    gethomepage.dev/name: Bazarr
    gethomepage.dev/widget.type: "Bazarr"
    gethomepage.dev/widget.url: "http://bazarr.home.adaminformatika.hu/"
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 10 # optional
    gethomepage.dev/instance: "public" # optional
  name: bazarr
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: bazarr.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: bazarr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bazarr.home.adaminformatika.hu
    secretName: bazarr.home.adaminformatika.hu
